--- a/.gitignore
+++ b/.gitignore
@@ -74,10 +74,12 @@ web_modules/
 
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
+.env.test
+.env.development
+.env.test
+.env.production
 .env.local
+.env.staging
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
