--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jest": "^29.7.0",
+    "jsdoc": "^4.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^9.1.1",
     "mongoose": "^8.0.1",
@@ -49,6 +50,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "nodemailer-mock": "^2.0.2",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2"
